// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Url renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      disabled={true}
      placeholder=" "
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      disabled={true}
      placeholder=" "
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV uPZDC"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV jEnnXl"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV fKIZtH"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      placeholder=" "
      readOnly={true}
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      placeholder=" "
      readOnly={true}
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      dir="rtl"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      dir="rtl"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-cmvVVv bXkXQL"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <input
      className="sc-joKenV giDeyQ"
      placeholder="medium"
      type="url"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <input
      className="sc-joKenV epIvjr"
      placeholder="large"
      type="url"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV jimMqo"
        placeholder="xlarge"
        type="url"
      />
      <label
        className="sc-cmvVVv keWJSg"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV aKByj"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV fVMePs"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK bLHNyM"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
